@@ -172,7 +172,8 @@ public class ConstraintsTransferRelation
       // If a constraint is trivial, its satisfiability is not influenced by other constraints.
       // So to evade more expensive SAT checks, we just check the constraint on its own.
       if (newConstraint.isTrivial()) {
-        if (solver.checkUnsat(newConstraint, functionName) == Satisfiability.UNSAT) {
+        if (solver.checkUnsatWithOptionDefinedSolverReuse(newConstraint, functionName)
+            == Satisfiability.UNSAT) {
           return null;
         }
       } else {
@@ -187,22 +188,18 @@ public class ConstraintsTransferRelation
       AExpression pExpression, ConstraintFactory pFactory, boolean pTruthAssumption)
       throws UnrecognizedCodeException {
 
-    if (pExpression instanceof JBinaryExpression) {
-      return createConstraint((JBinaryExpression) pExpression, pFactory, pTruthAssumption);
-
-    } else if (pExpression instanceof JUnaryExpression) {
-      return createConstraint((JUnaryExpression) pExpression, pFactory, pTruthAssumption);
-
-    } else if (pExpression instanceof CBinaryExpression) {
-      return createConstraint((CBinaryExpression) pExpression, pFactory, pTruthAssumption);
-
-    } else if (pExpression instanceof AIdExpression) {
+    return switch (pExpression) {
+      case JBinaryExpression jBinaryExpression ->
+          createConstraint(jBinaryExpression, pFactory, pTruthAssumption);
+      case JUnaryExpression jUnaryExpression ->
+          createConstraint(jUnaryExpression, pFactory, pTruthAssumption);
+      case CBinaryExpression cBinaryExpression ->
+          createConstraint(cBinaryExpression, pFactory, pTruthAssumption);
       // id expressions in assume edges are created by a call of __VERIFIER_assume(x), for example
-      return createConstraint((AIdExpression) pExpression, pFactory, pTruthAssumption);
-
-    } else {
-      throw new AssertionError("Unhandled expression type " + pExpression.getClass());
-    }
+      case AIdExpression aIdExpression ->
+          createConstraint(aIdExpression, pFactory, pTruthAssumption);
+      default -> throw new AssertionError("Unhandled expression type " + pExpression.getClass());
+    };
   }
 
   private Optional<Constraint> createConstraint(
@@ -288,7 +285,7 @@ public class ConstraintsTransferRelation
     boolean nothingChanged = true;
 
     for (AbstractState currStrengtheningState : pStrengtheningStates) {
-      ConstraintsState currStateToStrengthen = newStates.get(0);
+      ConstraintsState currStateToStrengthen = newStates.getFirst();
       StrengthenOperator strengthenOperator = null;
 
       if (currStrengtheningState instanceof ValueAnalysisState) {
@@ -332,7 +329,8 @@ public class ConstraintsTransferRelation
   private static ConstraintsState getIfSatisfiable(
       ConstraintsState pStateToCheck, String functionName, ConstraintsSolver solver)
       throws UnrecognizedCodeException, SolverException, InterruptedException {
-    SolverResult solverResult = solver.checkUnsat(pStateToCheck, functionName);
+    SolverResult solverResult =
+        solver.checkUnsatWithOptionDefinedSolverReuse(pStateToCheck, functionName);
     if (solverResult.satisfiability() == Satisfiability.SAT) {
       ConstraintsState newState = pStateToCheck;
       if (solverResult.model().isPresent()) {
@@ -360,12 +358,11 @@ public class ConstraintsTransferRelation
 
       assert pValueState instanceof ValueAnalysisState;
 
-      if (!(pCfaEdge instanceof AssumeEdge)) {
+      if (!(pCfaEdge instanceof AssumeEdge assume)) {
         return Optional.empty();
       }
 
       final ValueAnalysisState valueState = (ValueAnalysisState) pValueState;
-      final AssumeEdge assume = (AssumeEdge) pCfaEdge;
 
       final boolean truthAssumption = assume.getTruthAssumption();
       final AExpression edgeExpression = assume.getExpression();
