@@ -111,7 +111,7 @@ public class SignCExpressionVisitor
         Sets.cartesianProduct(ImmutableList.of(leftAtomSigns, rightAtomSigns))) {
       result =
           result.combineWith(
-              evaluateExpression(signCombi.get(0), pIastBinaryExpression, signCombi.get(1)));
+              evaluateExpression(signCombi.getFirst(), pIastBinaryExpression, signCombi.get(1)));
     }
     return result;
   }
@@ -205,19 +205,19 @@ public class SignCExpressionVisitor
       Sign pLeft, CExpression pLeftExp, Sign pRight, CExpression pRightExp) {
     // Special case: - + 1 => -0, 1 + - => -0
     if ((pLeft == Sign.MINUS
-            && (pRightExp instanceof CIntegerLiteralExpression)
-            && ((CIntegerLiteralExpression) pRightExp).getValue().equals(BigInteger.ONE))
-        || ((pLeftExp instanceof CIntegerLiteralExpression)
-            && ((CIntegerLiteralExpression) pLeftExp).getValue().equals(BigInteger.ONE)
+            && (pRightExp instanceof CIntegerLiteralExpression rightExp)
+            && rightExp.getValue().equals(BigInteger.ONE))
+        || ((pLeftExp instanceof CIntegerLiteralExpression leftExp)
+            && leftExp.getValue().equals(BigInteger.ONE)
             && pRight == Sign.MINUS)) {
       return Sign.MINUS0;
     }
     // Special case: +0 + 1 => +, 1 + +0 => +
     if ((pLeft == Sign.PLUS0
-            && (pRightExp instanceof CIntegerLiteralExpression)
-            && ((CIntegerLiteralExpression) pRightExp).getValue().equals(BigInteger.ONE))
-        || ((pLeftExp instanceof CIntegerLiteralExpression)
-            && ((CIntegerLiteralExpression) pLeftExp).getValue().equals(BigInteger.ONE)
+            && (pRightExp instanceof CIntegerLiteralExpression rightExp)
+            && rightExp.getValue().equals(BigInteger.ONE))
+        || ((pLeftExp instanceof CIntegerLiteralExpression leftExp)
+            && leftExp.getValue().equals(BigInteger.ONE)
             && pRight == Sign.PLUS0)) {
       return Sign.PLUS;
     }
@@ -245,14 +245,14 @@ public class SignCExpressionVisitor
   private Sign evaluateMinusOperator(Sign pLeft, Sign pRight, CExpression pRightExp) {
     // Special case: + - 1 => +0
     if (pLeft == Sign.PLUS
-        && (pRightExp instanceof CIntegerLiteralExpression)
-        && ((CIntegerLiteralExpression) pRightExp).getValue().equals(BigInteger.ONE)) {
+        && (pRightExp instanceof CIntegerLiteralExpression cIntegerLiteralExpression)
+        && cIntegerLiteralExpression.getValue().equals(BigInteger.ONE)) {
       return Sign.PLUS0;
     }
     // Special case: -0 - 1 => -
     if (pLeft == Sign.MINUS0
-        && (pRightExp instanceof CIntegerLiteralExpression)
-        && ((CIntegerLiteralExpression) pRightExp).getValue().equals(BigInteger.ONE)) {
+        && (pRightExp instanceof CIntegerLiteralExpression cIntegerLiteralExpression)
+        && cIntegerLiteralExpression.getValue().equals(BigInteger.ONE)) {
       return Sign.MINUS;
     }
     if (pRight == Sign.ZERO) {
