@@ -258,7 +258,7 @@ public class BVConverter extends Converter {
       // extract number N from "(_ bvN 32)", we want the "N" from "bvN"
       int n =
           Integer.parseInt(
-              Splitter.on(' ').splitToList(terms.get(0).getFirst()).get(1).substring(2));
+              Splitter.on(' ').splitToList(terms.getFirst().getFirst()).get(1).substring(2));
       return Pair.of(format("(__string__ %d)", n), new Type<>(op.getSecond().getReturnType()));
 
     } else if (terms.size() == 1 && unaryOps.containsKey(op.getFirst())) {
@@ -276,7 +276,7 @@ public class BVConverter extends Converter {
 
     } else if (terms.size() == 2
         && (binOps.containsKey(op.getFirst()) || arithmeticOps.containsKey(op.getFirst()))) {
-      Pair<String, Type<FormulaType<?>>> e1 = terms.get(0);
+      Pair<String, Type<FormulaType<?>>> e1 = terms.getFirst();
       Pair<String, Type<FormulaType<?>>> e2 = terms.get(1);
       Type<FormulaType<?>> t1 = e1.getSecond();
       Type<FormulaType<?>> t2 = e2.getSecond();
@@ -303,7 +303,7 @@ public class BVConverter extends Converter {
           type);
 
     } else if (terms.size() == 3 && "ite".equals(op.getFirst())) {
-      Pair<String, Type<FormulaType<?>>> cond = terms.get(0);
+      Pair<String, Type<FormulaType<?>>> cond = terms.getFirst();
       Pair<String, Type<FormulaType<?>>> eIf = terms.get(1);
       Pair<String, Type<FormulaType<?>>> eElse = terms.get(2);
       if (FormulaType.BooleanType.equals(eIf.getSecond().getReturnType())) {
@@ -347,7 +347,7 @@ public class BVConverter extends Converter {
       return Pair.of(format("(%s %s)", op.getFirst(), Joiner.on(' ').join(params)), op.getSecond());
 
     } else { // UF
-      if (!("_".equals(op.getFirst()) && "divisible".equals(terms.get(0).getFirst()))) {
+      if (!("_".equals(op.getFirst()) && "divisible".equals(terms.getFirst().getFirst()))) {
         logger.log(Level.SEVERE, "unhandled term:", op, terms);
       }
       return Pair.of(
