@@ -47,7 +47,6 @@ import org.sosy_lab.cpachecker.core.specification.Specification;
 import org.sosy_lab.cpachecker.cpa.arg.ARGState;
 import org.sosy_lab.cpachecker.cpa.location.LocationState;
 import org.sosy_lab.cpachecker.util.AbstractStates;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.expressions.And;
 import org.sosy_lab.cpachecker.util.expressions.ExpressionTree;
 import org.sosy_lab.cpachecker.util.expressions.ExpressionTrees;
@@ -138,9 +137,9 @@ class ARGToYAMLWitness extends AbstractYAMLWitnessExporter {
     private final Map<ARGState, ListMultimap<AFunctionDeclaration, ARGState>> callStackRecovery =
         new HashMap<>();
 
-    protected void analyze(ARGState pSuccessor) {
+    void analyze(ARGState pSuccessor) {
       if (!pSuccessor.getParents().isEmpty()) {
-        ARGState parent = pSuccessor.getParents().stream().findFirst().orElseThrow();
+        ARGState parent = pSuccessor.getParents().getFirst();
         if (callStackRecovery.containsKey(parent)) {
           // Copy the saved callstack, since we want to return to the state we had before the
           // branching
@@ -151,7 +150,7 @@ class ARGToYAMLWitness extends AbstractYAMLWitnessExporter {
       for (LocationState state :
           AbstractStates.asIterable(pSuccessor).filter(LocationState.class)) {
         CFANode node = state.getLocationNode();
-        FluentIterable<CFAEdge> leavingEdges = CFAUtils.leavingEdges(node);
+        FluentIterable<CFAEdge> leavingEdges = node.getLeavingEdges();
         if (node.isLoopStart()) {
           collectedStates.loopInvariants.put(node, pSuccessor);
         } else if (leavingEdges.size() == 1
@@ -165,8 +164,7 @@ class ARGToYAMLWitness extends AbstractYAMLWitnessExporter {
           Verify.verify(!functionEntryNodes.isEmpty());
           collectedStates.functionContractEnsures.put(
               functionExitNode,
-              new FunctionEntryExitPair(
-                  functionEntryNodes.remove(functionEntryNodes.size() - 1), pSuccessor));
+              new FunctionEntryExitPair(functionEntryNodes.removeLast(), pSuccessor));
         }
 
         if (pSuccessor.getChildren().size() > 1 && !callStackRecovery.containsKey(pSuccessor)) {
@@ -175,7 +173,7 @@ class ARGToYAMLWitness extends AbstractYAMLWitnessExporter {
       }
     }
 
-    public CollectedARGStates getCollectedStates() {
+    CollectedARGStates getCollectedStates() {
       return collectedStates;
     }
   }
